--- a/src/main/resources/com/example/practica3modulosfx/Cubrir-Matricula.fxml
+++ b/src/main/resources/com/example/practica3modulosfx/Cubrir-Matricula.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<SplitPane dividerPositions="0.48743718592964824" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.practica3modulosfx.HelloController">
+<SplitPane dividerPositions="0.48743718592964824" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.practica3modulosfx.CubrirMatriculaController">
     <items>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
             <children>
@@ -113,7 +113,7 @@
                                 <Font name="System Bold" size="12.0" />
                             </font>
                         </Label>
-                        <Button fx:id="mostrarMatricula" mnemonicParsing="false" prefHeight="48.0" prefWidth="217.0" text="Mostrar matrícula" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.rowSpan="2147483647" />
+                        <Button fx:id="mostrarMatricula" mnemonicParsing="false" onAction="#onMostrarMatriculaClick" prefHeight="48.0" prefWidth="217.0" text="Mostrar matrícula" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.rowSpan="2147483647" />
                     </children>
                     <padding>
                         <Insets bottom="10.0" left="30.0" right="10.0" top="10.0" />
